--- a/catalogBook.html
+++ b/catalogBook.html
@@ -7,38 +7,29 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body class="IndexBody">
-    <header class="header">
-        <!-- Логотип -->
-        <div class="logo">
-          <a href="index.html" class="nav_link">Book</a>
-        </div>
-  
-        <ul class="nav_list">
-          <li class="nav_item">
-            <a href="index.html" class="nav_link">Головна</a>
-          </li>
-          <li class="nav_item">
-            <a href="catalogBook.html" class="nav_link">Каталог</a>
-          </li>
-          <li class="nav_item">
-            <a href="" class="nav_link">Фантастика</a>
-          </li>
-          <li class="nav_item">
-            <a href="" class="nav_link">Роман</a>
-          </li>
-          <li class="nav_item">
-            <a href="" class="nav_link">Драма</a>
-          </li>
-          <li class="nav_item">
-            <a href="" class="nav_link"
-              ><img
-                src="image/profile_icon.png"
-                class="ProfilIcon"
-                alt="ProfilIcon"
-            /></a>
-          </li>
-        </ul>
-    </header>
+  <header class="header">
+    <!-- Логотип -->
+    <div class="logo">
+      <a href="index.html" class="nav_link">Book</a>
+    </div>
+
+    <ul class="nav_list">
+      <li class="nav_item">
+        <a href="index.html" class="nav_link">Головна</a>
+      </li>
+      <li class="nav_item">
+        <a href="catalogBook.html" class="nav_link">Каталог</a>
+      </li>
+      <li class="nav_item">
+        <a href="auth.html" class="nav_link"
+          ><img
+            src="image/profile_icon.png"
+            class="ProfilIcon"
+            alt="ProfilIcon"
+        /></a>
+      </li>
+    </ul>
+</header>
 
     <main>
         
